--- a/style.css
+++ b/style.css
@@ -12,32 +12,323 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
-    font-family: 'Merriweather', serif;
     font-size: 16px;
     line-height: 1.6;
 }
 
 
 /* HLAVICKA */
+.header {
+    background-image:linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url(images/island-hlavicka.jpg);
+    background-size: cover;
+    text-align: center;
+    color: #f5f5f5;
+    padding: 25px;
 
+}
 .titulek {
     font-family: 'Raleway', serif;
+    margin-top: 0; 
+    font-size: 60px;
+}
+.autor {
+    font-family: 'Merriweather','sans-serif';
+    display: flex;
+    justify-content: center;
+    position: relative;
+    font-size: small;
+    color: #dcd7d7;
+    font-style: italic;
+    margin-top: 50px;
+    
+}
+.autor::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 60px;
+    height: 1px;
+    background-color: rgb(215, 215, 215);
+    top:-15px;
+    
 }
 
-
 /* MENU */
-
-
-
+.menu{
+    font-family: 'Raleway', serif;
+    list-style: none;
+    text-transform: uppercase;
+    padding: 0;
+    text-align: center;
+    padding-top: 30px;
+    margin-top: 0;
+}
+li a{
+    display: block;
+    text-decoration: none;
+    border-bottom: 1px solid rgb(233, 229, 229);
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    color: rgb(174, 170, 170); 
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-top: 5px;
+    padding-bottom: 5px;
+}
+li a:hover {
+    color: black;
+}
 
 /* OBSAH */
+    .obsah{
+        box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.116);
+        padding-bottom: 1px;
+    }
+    .sekce{
+        font-family: 'Merriweather','sans-serif';
+        color: #565555;
+    }
+    strong {
+        font-weight: bold;
+        color: black;
+        /*když jsem upravila font, tak mi to rzušilo to tučné zvýraznění slov, proto takto*/
+    }
+    .nadpis {
+        font-family: 'Raleway', serif;
+        color: black;
+        position: relative;
+        margin-left: 50px;
+        margin-right: 20px;
+        margin-bottom: 65px;
+        margin-top: 40px;
+        font-size: 25px;
+    }
+    .nadpis::after {
+        content: "";
+        display: block;
+        position:absolute;
+        width: 90px;
+        height: 4px;
+        background-color: rgb(101, 139, 193);
+        left: -50px;
+        top: 90px;
+    }
+    .text {
+        padding-top: 0px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 50px;
+    }
+    .popisek {
+        margin: 0;
+        font-size: small;
+    }
+    .obrazky {
+        font-family: 'Merriweather','sans-serif';
+        text-align: center;
+        color: rgb(155, 152, 152);
+    } 
+    .obrazky  a {
+        color: rgb(155, 152, 152);
+    }
+    .obrazky a:hover {
+        color: black;
+    }
+    .obrazky img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+  
+    /* FOTOGALERIE */
+    .foto {
+        text-align: center;
+        color:rgb(119, 118, 118);
+        font-weight: bold;
+    }
+    .foto img {
+        display: block;
+        min-width: 100%;
+        height: auto;
+    }
+    .popisekfoto {
+        font-family: 'Raleway', serif;
+        padding-bottom: 18px;
+        line-height: 1.2;
+    }
+    .popisekcopy {
+        font-weight: lighter;
+        color:rgb(155, 152, 152);
 
-
-
-
-/* FOTOGALERIE */
-
-
-
-
+    }
+    .popisekcopy a {
+        color:rgb(155, 152, 152);
+    }
+    .foto a:hover {
+        color: black;
+    }
 /* PATICKA */
+.paticka {
+    padding-top: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: rgb(155, 152, 152);
+    line-height: 1.2;
+}
+.paticka a{
+    color: rgb(155, 152, 152);
+}
+/*nastaveni pro tablet*/
+@media screen and (min-width: 665px) {
+    .menu {
+        display: flex;
+        justify-content: center;
+    }
+    .menu li {
+        border-top: 1px;
+        border-bottom: 1px;
+        border-left: 1px; 
+        border-right: 0px;
+        border-style: solid;
+        border-color: rgb(233, 229, 229);   
+    }
+    .menu a {
+        border-bottom: none;
+    }
+    .menu li:first-child {
+        border-left: none;
+    }
+    .nadpis {
+        margin-left: 30px;
+    }
+    .obrazky {
+        position: relative;
+    }
+    .obrazky  a {
+        color: rgb(255, 255, 255);
+    }
+    .popisek {
+
+        position: absolute;
+        bottom: 7px;
+        right: 15px;
+        color: #f5f5f5;
+        font-size: x-small;
+    }
+    .galerie {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .foto{
+        width: 50%;
+    }
+    .foto img {
+        width: 100%;
+    }
+    .popisekfoto {
+        display: none;
+    }
+}
+@media screen and (min-width: 1000px) {
+    .obsah {
+        background-color: #f5f5f5;
+        width: 960px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -50px; 
+    }
+   .header {
+    padding: 5% 20% 10% 20%
+   }
+    .flex-kontejner {
+        display: flex;
+    }
+    .uvod { 
+        width: 70%;
+        padding-top: 30px;
+        padding-right: 40px;
+    }
+    .menu {
+        display: inline;
+        width: 30%;
+        padding-left: 50px;
+        padding-top: 50px;
+    }
+    .menu li {
+        text-align: left;
+        border-left: none;
+        border-top: none;
+        width: 220px;
+    }
+    .menu a {
+        margin-left: 0;
+    }
+    .proctext {
+        padding-left: 30px;
+        padding-top: 0;
+        padding-right: 230px;
+
+    }
+    .covidet {
+        padding-left: 230px;
+        padding-right: 30px;
+        padding-top: 10px;
+        margin-top: 0;
+    }
+    .nadpis.covidet {
+        margin-bottom: 50px;
+        margin-left: 20px;
+    }
+   
+   .nadpis.covidet::after {
+    content: "";
+    display: block;
+    position:absolute;
+    width: 100px;
+    height: 4px;
+    background-color: rgb(101, 139, 193);
+    left: 180px;
+    top: 120px;
+   }
+   .sekce.zmena {
+    padding-top: 40px
+   }
+   .foto {
+    position: relative;
+    overflow: hidden;
+    width: calc(33.33% - 0px)
+   }
+   .foto img {
+    transition: transform 0.3s;
+   }
+   .popisekfoto{
+     display: block ;
+     position: absolute;
+     top: 100%;
+     left:0%;
+     padding-top: 10px;
+     margin: 0;
+     background-color: #5655557d;
+     width: 100%;
+     color: #f5f5f5;
+     transition: transform 0.3s;
+   }
+   .popisekcopy,.popisekcopy a {
+    color: #f5f5f5;
+   }
+   .foto:hover .popisekfoto {
+    display: block;
+    transform: translateY(-100%);
+   }
+   .foto:hover img {
+    transform: scale(1.2);
+   }
+   .paticka {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    width: 960px;
+    padding: 0;
+   }
+}
