--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ li a:hover {
         width: 90px;
         height: 4px;
         background-color: rgb(101, 139, 193);
-        left: -30px;
+        left: -50px;
         top: 90px;
     }
     .text {
@@ -201,6 +201,16 @@ li a:hover {
     }
     .nadpis {
         margin-left: 30px;
+    }
+    .nadpis::after {
+        content: "";
+        display: block;
+        position:absolute;
+        width: 90px;
+        height: 4px;
+        background-color: rgb(101, 139, 193);
+        left: -30px;
+        top: 90px;
     }
     .obrazky {
         position: relative;
@@ -307,7 +317,7 @@ li a:hover {
      position: absolute;
      top: 100%;
      left:0%;
-     padding-top: 10px;
+     padding-top: 10;
      margin: 0;
      background-color: #5655557d;
      width: 100%;
